# Terracotta-iOS

./: .gitmodules  AGENTS.md  Cargo.toml  IFLOW.md  Localizable.xcstrings  build.rs  cbindgen.toml  log.txt  project.yml
.github/workflows/: build-ios.yaml  build.yml  gitee.yaml  ios-build.yaml  ios-cicd.yaml
Core/: Cargo.toml
Core/src/: lib.rs
Terracotta/: ContentView.swift  Info.plist  Terracotta.entitlements  TerracottaApp.swift
Terracotta/Utils/: CompatibilityChecker.swift  ErrorLogger.swift  ExtensionConfigManager.swift  FFIWrapper.swift  LogTailer.swift  NetworkConfigManager.swift  NetworkExtensionManager.swift  ProfileStore.swift  RoomManager.swift
Terracotta/Views/: DashboardView.swift  LogView.swift  RoomsView.swift  SettingsView.swift
TerracottaNetworkExtension/: Info.plist  PacketTunnelProvider.swift  TerracottaNetworkExtension-Bridging-Header.h  TerracottaNetworkExtension.entitlements  terracotta_ios.h
TerracottaShared/: TerracottaShared.swift
ci_scripts/: ci_post_clone.sh
ios/: IMPLEMENTATION_SUMMARY.md  Info.plist  Package.swift  README.md
ios/Extensions/: PacketTunnelProvider.swift  TerracottaNetworkExtension.entitlements
ios/Scripts/: build.sh  setup.sh
ios/Sources/TerracottaCore/: TerracottaCore.swift  VPNManager.swift
ios/Sources/TerracottaCore/Native/: BridgingHeader.h  module.modulemap  terracotta.c  terracotta.h
ios/Sources/TerracottaUI/ViewModels/: MainViewModel.swift
ios/Sources/TerracottaUI/Views/: MainView.swift
