[package]
name = "terracotta-ios"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
easytier = {
    path = "../../EasyTier/easytier"
}
tokio = {
    version = "1.35",
    features = ["full"]
}
serde = {
    version = "1.0",
    features = ["derive"]
}
serde_json = "1.0"
rand = "0.8"
